syntax = "proto3";

package packets;

// import "google/protobuf/empty.proto";
// import "google/protobuf/any.proto";
option go_package = "./packets";

message PObject {
	string Type = 1;
	bytes Body = 2;
}

message PError {
	int32 Code = 1;
	string Key = 2;
	string Message = 3;
	string Comment = 4;
	string MoreInfo = 5;
}

message PStatus {
	bool Success = 1;
	repeated PError Errors = 2;
}

message PViewAttribute {
	int64 ID = 1;
	string Key = 2;
	string Group = 3;
	string Description = 4;
	PObject Value = 5;
}

message PViewData {
	repeated string Fields = 1;
	repeated PViewAttribute Attributes = 2;
}

message PInputData {
	int64 ID = 1;
	string Description = 2;
	string Value = 3;
}

message PInputAnyData {
	int64 ID = 1;
	string Description = 2;
	PObject Value = 3;
}

message PViewRequest {
	string ProcessID = 7;
	int64 Offset = 1;
	int32 Limit = 2;
	repeated string Sorting = 3;
	map<string, PObject> Conditions = 4;
	repeated string Fields = 5;
	repeated string Groups = 6;
}

message PViewResponse {
	PStatus Status = 1;
	repeated PViewData Datas = 2;
}

message PInputRequest {
	string ProcessID = 4;
	map<string, PObject> Conditions = 1;
	map<string, PObject> Attributes = 2;
	map<string, PInputData> Metas = 3;
}

message PUpdateResponse {
	PStatus Status = 1;
	int64 AffectedCount = 2;
	map<int64, int64> AffectedIDs = 3;
}

message PInsertResponse {
	PStatus Status = 1;
	map<int64, int64> IDs = 2;
	map<int64, PViewResponse> Metas = 3;
}
